# android_device_xiaomi_kenzo

./: Android.mk  AndroidProducts.mk  BoardConfig.mk  README.mkdn  android_filesystem_config.h  board-info.txt  cm.dependencies  cm.mk  device.mk  extract-files.sh  full_kenzo.mk  lineage.dependencies  lineage.mk  project.config  proprietary-files.txt  releasetools.py  setup-makefiles.sh  system.prop  update-sha1sums.py  vendorsetup.sh
audio/: aanc_tuning_mixer.txt  audio_effects.conf  audio_output_policy.conf  audio_platform_info.xml  audio_platform_info_extcodec.xml  audio_policy.conf  audio_policy_configuration.xml  diracmobile.config  mixer_paths.xml  sound_trigger_mixer_paths.xml  sound_trigger_mixer_paths_wcd9306.xml  sound_trigger_mixer_paths_wcd9330.xml  sound_trigger_mixer_paths_wcd9335.xml  sound_trigger_platform_info.xml
bluetooth/: bdroid_buildcfg.h
camera/: Android.mk  CameraWrapper.cpp  CleanSpec.mk  common.mk  xiaomi_camera.c
camera/QCamera2/: Android.mk  QCamera2Factory.cpp  QCamera2Factory.h  QCamera2Hal.cpp  QCameraFormat.h
camera/mm-image-codec/: Android.mk
configs/: Android.mk  gps.conf  hostapd_default.conf  izat.conf  media_codecs.xml  media_codecs_8956.xml  media_codecs_performance.xml  media_profiles.xml  media_profiles_8956.xml  sec_config  sound_trigger_mixer_paths.xml  sound_trigger_mixer_paths_wcd9306.xml  sound_trigger_mixer_paths_wcd9330.xml  sound_trigger_mixer_paths_wcd9335.xml  sound_trigger_platform_info.xml
configs/configs/: media_profiles.xml
configs/data/: dsi_config.xml  netmgr_config.xml  qmi_config.xml
configs/sensors/: sensor_def_qcomdev.conf
data-ipa-cfg-mgr/: Makefile.am  configure.ac
data-ipa-cfg-mgr/ipacm/inc/: IPACM_CmdQueue.h  IPACM_Config.h  IPACM_ConntrackClient.h  IPACM_ConntrackListener.h  IPACM_Conntrack_NATApp.h  IPACM_Defs.h  IPACM_EvtDispatcher.h  IPACM_Filtering.h  IPACM_Header.h  IPACM_Iface.h  IPACM_IfaceManager.h  IPACM_Lan.h  IPACM_LanToLan.h  IPACM_Listener.h  IPACM_Log.h  IPACM_Neighbor.h  IPACM_Netlink.h  IPACM_Routing.h  IPACM_Wan.h  IPACM_Wlan.h  IPACM_Xml.h
data-ipa-cfg-mgr/ipacm/src/: Android.mk  IPACM_CmdQueue.cpp  IPACM_Config.cpp  IPACM_ConntrackClient.cpp  IPACM_ConntrackListener.cpp  IPACM_Conntrack_NATApp.cpp  IPACM_EvtDispatcher.cpp  IPACM_Filtering.cpp  IPACM_Header.cpp  IPACM_Iface.cpp  IPACM_IfaceManager.cpp  IPACM_Lan.cpp  IPACM_LanToLan.cpp  IPACM_Log.cpp  IPACM_Main.cpp  IPACM_Neighbor.cpp  IPACM_Netlink.cpp  IPACM_Routing.cpp  IPACM_Wan.cpp  IPACM_Wlan.cpp  IPACM_Xml.cpp  IPACM_cfg.xml  Makefile.am  mobileap_firewall.xml  start_ipacm_le
data-ipa-cfg-mgr/ipanat/inc/: ipa_nat_drv.h  ipa_nat_drvi.h  ipa_nat_logi.h
data-ipa-cfg-mgr/ipanat/src/: Android.mk  Makefile.am  ipa_nat_drv.c  ipa_nat_drvi.c  ipa_nat_logi.c
data-ipa-cfg-mgr/ipanat/test/: Android.mk  Makefile.am  README.txt  ipa_nat_test.h  ipa_nat_test000.c  ipa_nat_test001.c  ipa_nat_test002.c  ipa_nat_test003.c  ipa_nat_test004.c  ipa_nat_test005.c  ipa_nat_test006.c  ipa_nat_test007.c  ipa_nat_test008.c  ipa_nat_test009.c  ipa_nat_test010.c  ipa_nat_test011.c  ipa_nat_test012.c  ipa_nat_test013.c  ipa_nat_test014.c  ipa_nat_test015.c  ipa_nat_test016.c  ipa_nat_test017.c  ipa_nat_test018.c  ipa_nat_test019.c  ipa_nat_test020.c  ipa_nat_test021.c  ipa_nat_test022.c  main.c
display/: Android.mk  pp_calib_data_sharp_r63315_1080p_video_mode_dsi_panel.xml
doze/: Android.mk  AndroidManifest.xml  proguard.flags
fingerprint/: Android.mk  FingerprintWrapper.cpp
firmware-update/: cmnlib.mbn  devinfo.img  emmc_appsboot.mbn  hyp.mbn  keymaster.mbn  mdtp.img  rpm.mbn  sbl1.mbn  tz.mbn
gps/: Android.mk  Makefile.am  configure.ac  loc-api.pc.in
gps/core/: Android.mk  ContextBase.cpp  ContextBase.h  LBSProxyBase.h  LocAdapterBase.cpp  LocAdapterBase.h  LocAdapterProxyBase.h  LocApiBase.cpp  LocApiBase.h  UlpProxyBase.h  gps_extended_c.h
gps/etc/: Android.mk  gps.conf  izat.conf
gps/loc_api/: Android.mk
gps/loc_api/ds_api/: Android.mk
gps/loc_api/libloc_api-rpc-50001/: Android.mk
gps/loc_api/libloc_api-rpc-50001/libloc_api-rpc-glue/: Android.mk  Makefile.am
gps/loc_api/libloc_api-rpc-50001/libloc_api-rpc-glue/rpc_inc/: LocApiRpc.h  debug.h  loc_api_fixup.h  loc_api_log.h  loc_api_rpc_glue.h  loc_api_sync_call.h  loc_apicb_appinit.h
gps/loc_api/libloc_api-rpc-50001/libloc_api-rpc-glue/src/: LocApiRpc.cpp  loc_api_fixup.c  loc_api_log.c  loc_api_rpc_glue.c  loc_api_sync_call.c  loc_apicb_appinit.c
gps/loc_api/libloc_api-rpc-50001/libloc_api-rpc-stub/: Android.mk  Makefile.am
gps/loc_api/libloc_api-rpc-50001/libloc_api-rpc-stub/inc/: loc_api_rpcgen_cb_rpc.h  loc_api_rpcgen_common_rpc.h  loc_api_rpcgen_rpc.h  loc_apicb_appinit.h
gps/loc_api/libloc_api-rpc-50001/libloc_api-rpc-stub/src/: loc_api_rpcgen_cb_svc.c  loc_api_rpcgen_cb_xdr.c  loc_api_rpcgen_clnt.c  loc_api_rpcgen_common_xdr.c  loc_api_rpcgen_xdr.c  loc_apicb_appinit.c
gps/loc_api/libloc_api-rpc-50001/libloc_api-rpc-stub/xdr/: loc_api.xdr  loc_api_cb.xdr  loc_api_common.xdr
gps/loc_api/libloc_api_50001/: Android.mk  LocEngAdapter.cpp  LocEngAdapter.h  loc.cpp  loc.h  loc_eng.cpp  loc_eng.h  loc_eng_msg.h  loc_eng_ni.cpp  loc_eng_nmea.cpp  loc_eng_nmea.h  loc_eng_xtra.cpp
gps/loc_api/loc_api_v02/: Android.mk
gps/utils/: Android.mk  LocThread.cpp  LocTimer.cpp  log_util.h
healthd/: Android.mk  healthd_board_msm.cpp
idc/: uinput-fpc.idc
init/: Android.mk  init_kenzo.cpp
keylayout/: Atmel_maXTouch_Touchscreen.kl  ft5x06_ts.kl  msm8976-tashalite-snd-card_Button_Jack.kl  uinput-fpc.kl
liblight/: Android.mk  NOTICE  lights.c
libshims/: Android.mk
rootdir/: Android.mk
sepolicy/: audioserver.te  device.te  file.te  file_contexts  fingerprintd.te  fsck.te  gx_fpd.te  init.te  kernel.te  mediacodec.te  mediaserver.te  mm-pp-daemon.te  mm-qcamerad.te  netd.te  netmgrd.te  per_mgr.te  platform_app.te  priv_app.te  qmuxd.te  qseecomd.te  qti_init_shell.te  radio.te  rild.te  service_contexts  shell.te  system_server.te  tee.te  untrusted_app.te  vold.te  wcnss_service.te
vr/: Android.mk  vr.c
wifi/: Android.mk  WCNSS_qcom_cfg.ini
(+126 files in other folders)
